// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`in blockchain mode renders correctly block is invalid (index: 2) 1`] = `
<DocumentFragment>
  <form
    aria-label="Block Statistics"
    class="my-3"
  >
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Nonce
        </span>
      </div>
      <input
        aria-label="Block Nonce"
        class="form-control"
        disabled=""
        name="nonce"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Header
        </span>
      </div>
      <input
        aria-label="Block Header"
        class="form-control"
        disabled=""
        name="header"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Target
        </span>
      </div>
      <input
        aria-label="Block Target"
        class="text-truncate form-control"
        name="target"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Sol'n
        </span>
      </div>
      <input
        aria-label="Block Solution"
        class="text-truncate invalid-solution form-control"
        name="solution"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <button
      aria-label="Block Mine"
      class="btn-block mt-2 py-2 btn btn-primary"
      type="button"
    >
      <h4
        class="my-0 d-flex align-items-center justify-content-end"
      >
        Mine
        <span
          class="spinner-border spinner-border-md mx-5 invisible"
          role="status"
        />
      </h4>
    </button>
  </form>
</DocumentFragment>
`;

exports[`in blockchain mode renders correctly block is valid (index: 0) 1`] = `
<DocumentFragment>
  <form
    aria-label="Block Statistics"
    class="my-3"
  >
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Nonce
        </span>
      </div>
      <input
        aria-label="Block Nonce"
        class="form-control"
        disabled=""
        name="nonce"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Header
        </span>
      </div>
      <input
        aria-label="Block Header"
        class="form-control"
        disabled=""
        name="header"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Target
        </span>
      </div>
      <input
        aria-label="Block Target"
        class="text-truncate form-control"
        name="target"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Sol'n
        </span>
      </div>
      <input
        aria-label="Block Solution"
        class="text-truncate valid-solution form-control"
        name="solution"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <button
      aria-label="Block Mine"
      class="btn-block mt-2 py-2 btn btn-primary"
      disabled=""
      type="button"
    >
      <h4
        class="my-0 d-flex align-items-center justify-content-end"
      >
        Mine
        <span
          class="spinner-border spinner-border-md mx-5 invisible"
          role="status"
        />
      </h4>
    </button>
  </form>
</DocumentFragment>
`;

exports[`in preview mode renders correctly 1`] = `
<DocumentFragment>
  <form
    aria-label="Block Statistics"
    class="col-11 col-lg-5 mx-3"
  >
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Nonce
        </span>
      </div>
      <input
        aria-label="Block Nonce"
        class="form-control"
        disabled=""
        name="nonce"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Header
        </span>
      </div>
      <input
        aria-label="Block Header"
        class="form-control"
        disabled=""
        name="header"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Target
        </span>
      </div>
      <input
        aria-label="Block Target"
        class="text-truncate form-control"
        name="target"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Sol'n
        </span>
      </div>
      <input
        aria-label="Block Solution"
        class="text-truncate invalid-solution form-control"
        name="solution"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <button
      aria-label="Block Mine"
      class="btn-block mt-2 py-2 btn btn-primary"
      type="button"
    >
      <h4
        class="my-0 d-flex align-items-center justify-content-end"
      >
        Mine
        <span
          class="spinner-border spinner-border-md mx-5 invisible"
          role="status"
        />
      </h4>
    </button>
  </form>
</DocumentFragment>
`;
